# cossacks-1.52

./: .gitignore  README.md
src/: CMakeLists.txt  README.md
src/CommCore library/: CMakeLists.txt  CommCore.cpp  CommCore.h  CommInet.cpp  CommInit.cpp  CommLanDiscovery.cpp  CommQueue.cpp  CommRaw.cpp  CommRecv.cpp  CommServerList.cpp
src/IChat library/: GSC_ChatWindow.cpp  cs_chat.cpp
src/IntExplorer library/: DataXchange.cpp  Explore.cpp  FnDefine.cpp  ParseRQ.cpp
src/Main executable/: 3DBars.cpp  3DGraph.cpp  3DMapEd.cpp  3DRandMap.cpp  3DSurf.cpp  ActiveScenary.cpp  ActiveZone.cpp  AntiBug.cpp  Brigade.cpp  Build.cpp  CMakeLists.txt  Cdirsnd.cpp  Cdirsnd.h  ConstStr.cpp  Conststr.h  Cwave.cpp  Danger.cpp  Ddex1.cpp  Ddini.cpp  Ddini.h  DeviceCD.cpp  Dialogs.cpp  Dialogs.h  Economy.cpp  EinfoClass.cpp  Fastdraw.cpp  Fastdraw.h  GP_Draw.cpp  GP_Draw.h  GameSound.cpp  Groups.cpp  Gsinc.h  IR_Main.cpp  Icontool.cpp  Interface.cpp  Lines.cpp  LoadSave.cpp  MPlayer.cpp  MPlayerStub.cpp  MapDiscr.h  (+49 more)
src/Main executable/Arc/: GSCarch.cpp  GSCarch.h  GSCset.cpp  isiMasks.cpp
src/Main executable/NewCode/: UdpHolePuncher.cpp
src/Temp/: IChat.lib
src/build-win32/: CMakeCache.txt  Makefile  cmake_install.cmake
src/build-win32/CommCore library/: Makefile  cmake_install.cmake
src/build-win32/Main executable/: Makefile  cmake_install.cmake
src/build-win32/platform/: Makefile  cmake_install.cmake
src/build-win64/: CMakeCache.txt  Makefile  cmake_install.cmake
src/build-win64/CommCore library/: Makefile  cmake_install.cmake
src/build-win64/Main executable/: Makefile  cmake_install.cmake
src/build-win64/platform/: Makefile  cmake_install.cmake
src/cmake/: toolchain-mingw32.cmake  toolchain-mingw64.cmake
src/cmake/specs/: static-pthread-x86.specs
src/decompiled/: unrar.c
src/decompiled/Horizon/Horizon1/: Mission.c  Mission_ru.c
src/decompiled/Horizon/Horizon2/: Mission.c
src/decompiled/Horizon/Horizon3/: Mission.c
src/decompiled/Horizon/Horizon4/: Mission.c
src/decompiled/Horizon/Horizon5/: Mission.c
src/decompiled/ai/: Algeria.c  Austria.c  Bavaria.c  Denmark.c  England.c  France.c  German.c  Holland.c  Piemont.c  Poland.c  Portugalia.c  Russia.c  Saksinia.c  Spain.c  Sveden.c  Switzerland.c  Turcia.c  Ukraine.c  Venecia.c  Vengria.c
src/decompiled/history_battl/: Denbar.c  Gogenfridberg.c  MarstonMur.c  Mook.c  NewPort.c  Rymnik.c
src/decompiled/history_battl/Breitenfeld/: History1.c
src/decompiled/history_battl/Gangut/: History2.c
src/decompiled/history_battl/Gohshted/: History3.c
src/decompiled/history_battl/Kunersdorf/: kunersdorf.c
src/decompiled/history_battl/Leiten/: leiten.c
src/decompiled/history_battl/Lucen/: History5.c
src/decompiled/history_battl/Malplake/: malplake.c
src/decompiled/history_battl/Narva/: narva.c
src/decompiled/history_battl/Nerdlingen/: History5.c  nerdlingen.c
src/decompiled/history_battl/Poltava/: poltava.c
src/decompiled/history_battl/Vittshtok/: vittshtok.c
src/decompiled/history_battl/w_mount/: History.c
src/decompiled/missions/Algeria/Missal01/: Mission.c
src/decompiled/missions/Algeria/Missal02/: Mission.c
src/decompiled/missions/Algeria/Missal03/: Mission.c
src/decompiled/missions/Algeria/Missal04/: Mission.c
src/decompiled/missions/Algeria/Missal05/: Mission.c
src/decompiled/missions/Austria/Missau01/: Mission.c
src/decompiled/missions/Austria/Missau02/: Mission.c
src/decompiled/missions/Austria/Missau03/: Mission.c
src/decompiled/missions/Austria/Missau04/: Mission.c
src/decompiled/missions/Austria/Missau05/: Mission.c
src/decompiled/missions/Austria/Missau06/: Mission.c
src/decompiled/missions/Austria/Missau07/: Mission.c
src/decompiled/missions/Austria/Missau08/: Mission.c
src/decompiled/missions/Austria/Missau09/: Mission.c
src/decompiled/missions/Austria/Missau10/: Mission.c
src/decompiled/missions/England/Missen01/: Mission.c
src/decompiled/missions/England/Missen02/: Mission.c
src/decompiled/missions/England/Missen03/: Mission.c
src/decompiled/missions/England/Missen04/: Mission.c
src/decompiled/usermissions/: CMS_Start.c
src/platform/: CMakeLists.txt  WS2tcpip.h  Winsock2.h  config_compat.h  crtdbg.h  mmsystem.h  msvcrt_compat.c  msvcrt_compat.h  net_compat.h  ole2.h  platform.cpp  platform.h  platform_types.h  psapi.h  system_compat.h  time_compat.h  win32_pthread.c  windows.h  windowsx.h
src/tools/: DecompileDLL.java  decompile_all.sh  extract_mission_rars.sh  ghidra_decompile.py
src/tools/dll_build/: build_ai_dlls.sh  build_ai_dlls_macos.sh  build_all_dlls.sh  build_mission_dlls_macos.sh  collect_errors.sh  dmcr.def  fix_arg_counts.py  fix_missing_args.py  fix_transformed_dlls.py  game_api.h  game_api.h.bak  transform_ai_dll.py  transform_dll.py
src/transformed/Horizon/Horizon1/: Mission.c  Mission_ru.c
src/transformed/Horizon/Horizon2/: Mission.c
src/transformed/Horizon/Horizon3/: Mission.c
src/transformed/Horizon/Horizon4/: Mission.c
src/transformed/Horizon/Horizon5/: Mission.c
src/transformed/ai/: Algeria.c  Austria.c  Bavaria.c  Denmark.c  England.c  France.c  German.c  Holland.c  Piemont.c  Poland.c  Portugalia.c  Russia.c  Saksinia.c  Spain.c  Sveden.c  Switzerland.c  Turcia.c  Ukraine.c  Venecia.c  Vengria.c
src/transformed/history_battl/: Denbar.c  Gogenfridberg.c  MarstonMur.c  Mook.c  NewPort.c  Rymnik.c
src/transformed/history_battl/Breitenfeld/: History1.c
src/transformed/history_battl/Gangut/: History2.c
src/transformed/history_battl/Gohshted/: History3.c
src/transformed/history_battl/Kunersdorf/: kunersdorf.c
src/transformed/history_battl/Leiten/: leiten.c
src/transformed/history_battl/Lucen/: History5.c
src/transformed/history_battl/Malplake/: malplake.c
src/transformed/history_battl/Narva/: narva.c
src/transformed/history_battl/Nerdlingen/: History5.c  nerdlingen.c
src/transformed/history_battl/Poltava/: poltava.c
src/transformed/history_battl/Vittshtok/: vittshtok.c
src/transformed/history_battl/w_mount/: History.c
src/transformed/usermissions/: CMS_Start.c
(+362 files in other folders)
